@@ -111,6 +111,9 @@ class ContentModelArticles extends JModelList
 			$this->setState('filter.forcedLanguage', $forcedLanguage);
 		}
 
+		$tag = $this->getUserStateFromRequest($this->context.'.filter.tag', 'filter_tag', '');
+		$this->setState('filter.tag', $tag);
+
 		// List state information.
 		parent::populateState('a.title', 'asc');
 	}
@@ -276,6 +279,17 @@ class ContentModelArticles extends JModelList
 		if ($language = $this->getState('filter.language'))
 		{
 			$query->where('a.language = '.$db->quote($language));
+		}
+
+		// Filter by a single tag.
+		$tagId = $this->getState('filter.tag');
+		if (is_numeric($tagId))
+		{
+			$query->where($db->quoteName('tagmap.tag_id') . ' = ' . (int) $tagId);
+			$query->join('LEFT', $db->quoteName('#__contentitem_tag_map', 'tagmap')
+					. ' ON ' . $db->quoteName('tagmap.content_item_id') . ' = ' .  $db->quoteName('a.id')
+					. ' AND ' . $db->quoteName('tagmap.type_alias') . ' = ' . $db->quote('com_content.article'))
+					;
 		}
 
 		// Add the list ordering clause.
