@@ -99,6 +99,9 @@ class NewsfeedsModelNewsfeeds extends JModelList
 			$this->setState('filter.forcedLanguage', $forcedLanguage);
 		}
 
+		$tag = $this->getUserStateFromRequest($this->context.'.filter.tag', 'filter_tag', '');
+		$this->setState('filter.tag', $tag);
+
 		// Load the parameters.
 		$params = JComponentHelper::getParams('com_newsfeeds');
 		$this->setState('params', $params);
@@ -231,6 +234,18 @@ class NewsfeedsModelNewsfeeds extends JModelList
 		{
 			$query->where('a.language = ' . $db->quote($language));
 		}
+
+		// Filter by a single tag.
+		$tagId = $this->getState('filter.tag');
+		if (is_numeric($tagId))
+		{
+			$query->where($db->quoteName('tagmap.tag_id') . ' = ' . (int) $tagId);
+			$query->join('LEFT', $db->quoteName('#__contentitem_tag_map', 'tagmap')
+					. ' ON ' . $db->quoteName('tagmap.content_item_id') . ' = ' .  $db->quoteName('a.id')
+					. ' AND ' . $db->quoteName('tagmap.type_alias') . ' = ' . $db->quote('com_newsfeeds.newsfeed'))
+					;
+		}
+
 
 		// Add the list ordering clause.
 		$orderCol	= $this->state->get('list.ordering');
